feat: MP-7 솔로/자유 랭크 챔피언 통계 단일 API 통합
GET /api/v1/rank/champions 응답을 { solo, flex } split 구조로 변경.
queueId 파라미터 제거, 단일 쿼리에서 queue_id IN (420, 440) + queue_id GROUP BY 후 어댑터에서 분리.

Created-By: Padosol